--- a/docs/wearables/guides/apple-healthkit.mdx
+++ b/docs/wearables/guides/apple-healthkit.mdx
@@ -5,7 +5,7 @@ title: "Apple HealthKit"
 Apple HealthKit is an SDK-based provider. Your Android consumer app would embed the Vital Mobile SDKs on a supported
 stack. Data are then pulled from the Apple HealthKit data store on the user's Android device.
 
-Refer to the [Mobile SDK Installation](/wearables/sdks/installation) and [Vital Health SDK] guides for SDK installation
+Refer to the [Mobile SDK Installation](/wearables/sdks/installation) and [Vital Health SDK](/wearables/sdks/vital-health) guides for SDK installation
 instructions and general API usage. This guide contains information on the the behaviour and required configuration
 specific to the Apple HealthKit integration.
 
