--- a/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
+++ b/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
@@ -13,6 +13,12 @@ previous versions.
 <ResponseField name="event_type" type="const string" required="true">
 Constant: `daily.data.electrocardiogram_voltage.updated`
 </ResponseField>
+<ResponseField name="team_id" type="string" required="true">
+</ResponseField>
+<ResponseField name="user_id" type="string" required="true">
+</ResponseField>
+<ResponseField name="client_user_id" type="string" required="true">
+</ResponseField>
 <ResponseField name="data" type="TimeseriesData" required="true">
 <Expandable title="TimeseriesData" defaultOpen="true">
 <ResponseField name="data" type="ClientFacingTimeseries[]" required="true">
@@ -83,6 +89,9 @@ URL for source logo
 ```json Example
 {
   "event_type": "daily.data.electrocardiogram_voltage.updated",
+  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
+  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
+  "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
     "data": [
       {
@@ -103,7 +112,7 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "c99421b5-777b-4cb5-9632-b0731e348d2f"
+    "user_id": "2ec40dd7-178e-40e5-8388-2f8ac6997e1e"
   }
 }
 ```
