--- a/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
@@ -12,6 +12,12 @@ versions.
 <ResponseField name="event_type" type="const string" required="true">
 Constant: `daily.data.workout_stream.unavailable`
 </ResponseField>
+<ResponseField name="team_id" type="string" required="true">
+</ResponseField>
+<ResponseField name="user_id" type="string" required="true">
+</ResponseField>
+<ResponseField name="client_user_id" type="string" required="true">
+</ResponseField>
 <ResponseField name="data" type="WorkoutStreamUnavailable" required="true">
 <Expandable title="WorkoutStreamUnavailable" defaultOpen="true">
 <ResponseField name="user_id" type="string" required="true">
@@ -66,9 +72,12 @@ Slug for designated sport
 ```json Example
 {
   "event_type": "daily.data.workout_stream.unavailable",
+  "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
+  "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
+  "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "user_id": "9bce4515-9490-4436-9498-8acfd05b1dbb",
-    "workout_id": "01f9e101-e0c8-4b5b-af86-9b0524559a10",
+    "user_id": "ea5500ff-0313-4660-9bd0-46512dcc9857",
+    "workout_id": "4dfa8d31-a985-4d8c-ab9b-ba9246d2c53c",
     "message": "The stream for this workout is not available.",
     "provider": {
       "name": "Oura",
