Health Connect permission typo: READ_NUTRITION -> READ_HYDRATION

--- a/docs/wearables/guides/android-health-connect.mdx
+++ b/docs/wearables/guides/android-health-connect.mdx
@@ -85,7 +85,7 @@ For example, if you intend to sync Blood Pressure records and Blood Glucose reoc
 | `Steps`                  | `android.permission.health.READ_STEPS` |
 | `ActiveEnergyBurned`     | `android.permission.health.READ_ACTIVE_CALORIES_BURNED` |
 | `BasalEnergyBurned`      | `android.permission.health.READ_ACTIVE_CALORIES_BURNED`<br />`android.permission.health.READ_BASAL_METABOLIC_RATE`<br />`android.permission.health.READ_TOTAL_CALORIES_BURNED` |
-| `Water`                  | `android.permission.health.READ_NUTRITION` |
+| `Water`                  | `android.permission.health.READ_HYDRATION` |
 
 
 ### Foreground Service permissions
