Update SDK historical pull days

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -161,8 +161,8 @@ When a new provider is connected to a user, Vital retrieves the historical data 
 | [Omron](https://www.omron-healthcare.com) (SDK)                              | `90`          |
 | [Contour](https://www.diabetes.ascensia.com) (SDK)                           | `90`          |
 | [Accu-Chek](https://www.accu-chek.com) (SDK)                                 | `90`          |
-| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)                | `90`          |
-| [Android Health Connect](https://developer.android.com/health-connect) (SDK) | `30`          |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)                | 30, Configurable          |
+| [Android Health Connect](https://developer.android.com/health-connect) (SDK) | 30, Configurable          |
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK)         | `90`          |
 | [Braun Healthcare](https://www.braunhealthcare.com)                          | `90`          |
 | [Hammerhead](https://www.hammerhead.io)                                      | `30`          |
