Remove the -from-org and -in-org suffix from page names

--- a/docs/api-reference/org-management/team/create-team.mdx
+++ b/docs/api-reference/org-management/team/create-team.mdx
@@ -1,5 +1,6 @@
 ---
-openapi: get /v1/org/{org_id}/team
+openapi: post /v1/org/{org_id}/team
+title: "Create Team"
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
