--- a/docs/api-reference/org-management/team/delete-team.mdx
+++ b/docs/api-reference/org-management/team/delete-team.mdx
@@ -1,5 +1,6 @@
 ---
 openapi: delete /v1/org/{org_id}/team/{team_id}
+title: "Delete Team"
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
