--- a/docs/api-reference/org-management/team/get-team.mdx
+++ b/docs/api-reference/org-management/team/get-team.mdx
@@ -1,5 +1,6 @@
 ---
-openapi: patch /v1/org/{org_id}/team/{team_id}
+openapi: get /v1/org/{org_id}/team/{team_id}
+title: "Get Team"
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
