--- a/docs/api-reference/org-management/team/list-teams.mdx
+++ b/docs/api-reference/org-management/team/list-teams.mdx
@@ -1,5 +1,6 @@
 ---
-openapi: post /v1/org/{org_id}/team
+openapi: get /v1/org/{org_id}/team
+title: "List Teams"
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
