--- a/docs/api-reference/org-management/team/update-team.mdx
+++ b/docs/api-reference/org-management/team/update-team.mdx
@@ -1,5 +1,6 @@
 ---
-openapi: get /v1/org/{org_id}/team/{team_id}
+openapi: patch /v1/org/{org_id}/team/{team_id}
+title: "Update Team"
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
