Set cURL example

--- a/docs/api-reference/org-management/team-custom-credentials/get-team-custom-credentials.mdx
+++ b/docs/api-reference/org-management/team-custom-credentials/get-team-custom-credentials.mdx
@@ -5,3 +5,12 @@ openapi: get /v1/org/{org_id}/team_custom_credentials/{env}/{region}
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request GET \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/team_custom_credentials/{env}/{region} \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
