--- a/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
+++ b/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
@@ -6,3 +6,27 @@ title: Set Team Custom Credentials
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request POST \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/team_custom_credentials/{env}/{region} \
+  --header 'Content-Type: application/json' \
+  --header 'X-Vital-Org-Key: <api-key>' \
+  --data '{
+  "team_id": "3c90c3cc-0d44-4b50-8888-8dd25736052a",
+  "provider": "oura",
+  "client_id": "<string>",
+  "client_secret": "<string>",
+  "details": {
+    "fitbit": {
+      "is_hr_enabled": true,
+      "workout_verify_token": "<string>",
+      "sleep_verify_token": "<string>",
+      "body_verify_token": "<string>"
+    }
+  }
+}'
+```
+</RequestExample>
