--- a/docs/api-reference/org-management/invite/revoke-invite.mdx
+++ b/docs/api-reference/org-management/invite/revoke-invite.mdx
@@ -6,3 +6,12 @@ title: Revoke Invite
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request DELETE \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/invite/{invite_id} \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
