--- a/docs/api-reference/org-management/member/list-members.mdx
+++ b/docs/api-reference/org-management/member/list-members.mdx
@@ -6,3 +6,12 @@ title: List Members
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request GET \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/member \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
