--- a/docs/api-reference/org-management/org/update-org.mdx
+++ b/docs/api-reference/org-management/org/update-org.mdx
@@ -5,3 +5,12 @@ openapi: patch /v1/org/{org_id}
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request PATCH \
+  --url https://api.tryvital.io/management/v1/org/{org_id} \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
