--- a/docs/api-reference/org-management/team-api-keys/delete-team-api-keys.mdx
+++ b/docs/api-reference/org-management/team-api-keys/delete-team-api-keys.mdx
@@ -6,3 +6,12 @@ title: Delete Team API Keys
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request DELETE \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/team_api_keys/{env}/{region} \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
