--- a/docs/api-reference/org-management/team/get-team.mdx
+++ b/docs/api-reference/org-management/team/get-team.mdx
@@ -6,3 +6,12 @@ title: "Get Team"
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
 
 <OrgManagementAPI />
+
+
+<RequestExample>
+```bash cURL
+curl --request GET \
+  --url https://api.tryvital.io/management/v1/org/{org_id}/team/{team_id} \
+  --header 'X-Vital-Org-Key: <api-key>'
+```
+</RequestExample>
