--- a/docs/changelog/lab-testing/deprecations.mdx
+++ b/docs/changelog/lab-testing/deprecations.mdx
@@ -1,3 +1,16 @@
 ---
 title: "Deprecations"
 ---
+
+### `value` field in the `results` object
+
+We are removing the `value` field from the [results object](/api-reference/results/get-results), as it does not accuratly capture all possible result values. In turn, we've introduced the `result` field.
+
+<Card title="Recommended Action">
+Parse the `result` field in accordance to the `result_type` field. [More information here.](/lab/results/result-formats#resulttype)
+</Card>
+
+
+### `requisition_form_url` in the `order` object
+
+This field is a signed GCP bucket URL, which is only active for 7 days. It will be removed in favor of the [download PDF](/api-reference/lab-testing/requisition-pdf) endpoint.
