Update Event Catalog from fe90f902c070d80779d9e149d86471dff2c500d5

--- a/docs/event-catalog/provider.connection.created.mdx
+++ b/docs/event-catalog/provider.connection.created.mdx
@@ -43,6 +43,8 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
+<ResponseField name="resource_availability" type="object" required="true">
+</ResponseField>
 </Expandable>
 </ResponseField>
 # Examples
@@ -59,7 +61,7 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "f217452b-8163-4306-863c-6c648c8e8acc"
+    "user_id": "0b7b7f2f-8d21-44f6-9849-16717478811b"
   }
 }
 ```
